# elderly-companion-ai

./: .gitignore  README.md  create_utils.py  pyproject.toml
app/api/: endpoints.py
app/core/: dependencies.py
app/services/: recommender.py  reminders.py  tts.py
app/utils/: api_utils.py  db_utils.py  file_utils.py  general_utils.py  string_utils.py
database/: init_db.py
notebooks/: 1_GoogleMaps_and_OpenAI.ipynb  2_elderly_companion_ai_notebook_v1.ipynb  elderly_companion_ai_notebook_2.ipynb
